--- a/.github/workflows/fetch-consolidated_NHSN_HRD.yml
+++ b/.github/workflows/fetch-consolidated_NHSN_HRD.yml
@@ -37,12 +37,10 @@ jobs:
       - name: Run data collection script
         shell: bash -l {0}
         run: |
-
-          # collect the data
           python data/conversion/cases/fetch-format_NHSN-HRD-data.py --preliminary False
 
       - name: Commit changes to a new feature branch
-        shell: bash -l {0}
+        shell: bash
         run: |
 
           # generate timestamped branch name and store as environmental variable
@@ -66,13 +64,13 @@ jobs:
           git push origin "$BRANCH_NAME"
 
       - name: Create a pull request
-        shell: bash -l {0}
+        shell: bash
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
-          gh pr create --base main --head ${{ env.BRANCH_NAME }} --title "Automated NHSN HRD Update" --body "This PR includes the latest update of the NHSN HRD data."
+          gh pr create --base main --head ${{ env.BRANCH_NAME }} --title "Automated NHSN HRD Consolidated Data Update" --body "This PR includes the latest update of the consolidated NHSN HRD data."
       
       - name: Merge pull request
-        shell: bash -l {0}
+        shell: bash
         run: |
           gh pr merge --delete-branch --squash
 
