--- a/.github/workflows/fetch-preliminary_NHSN_HRD.yml
+++ b/.github/workflows/fetch-preliminary_NHSN_HRD.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           activate-environment: BENTOLAB-HIERARCHSIR 
           environment-file: BENTOLAB-HIERARCHSIR_conda-env.yml  
-          auto-activate-base: false
+          auto-activate: false
 
       - name: Run data collection script
         shell: bash
