--- a/.github/workflows/fetch-consolidated_NHSN_HRD.yml
+++ b/.github/workflows/fetch-consolidated_NHSN_HRD.yml
@@ -35,12 +35,15 @@ jobs:
           auto-activate: false
 
       - name: Run data collection script
-        shell: bash
+        shell: bash -l {0}
         run: |
+
+          # needs the '-l {0}' flag to use the initialised conda environment
+
           python data/conversion/cases/fetch-format_NHSN-HRD-data.py --preliminary False
 
       - name: Commit changes to a new feature branch
-        shell: bash
+        shell: bash -l {0}
         run: |
 
           # generate timestamped branch name and store as environmental variable
@@ -64,13 +67,13 @@ jobs:
           git push origin "$BRANCH_NAME"
 
       - name: Create a pull request
-        shell: bash
+        shell: bash -l {0}
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
           gh pr create --base main --head ${{ env.BRANCH_NAME }} --title "Automated NHSN HRD Consolidated Data Update" --body "This PR includes the latest update of the consolidated NHSN HRD data."
       
       - name: Merge pull request
-        shell: bash
+        shell: bash -l {0}
         run: |
           gh pr merge --delete-branch --squash
 
