Test workflows with backfill integrated (#64)

--- a/.github/workflows/fetch-preliminary_NHSN_HRD.yml
+++ b/.github/workflows/fetch-preliminary_NHSN_HRD.yml
@@ -23,7 +23,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           ref: main
 
@@ -32,15 +32,17 @@ jobs:
         with:
           activate-environment: BENTOLAB-HIERARCHSIR 
           environment-file: BENTOLAB-HIERARCHSIR_conda-env.yml  
-          auto-activate-base: false
 
       - name: Run data collection script
-        shell: bash
+        shell: bash -l {0}
         run: |
+
+          # needs the '-l {0}' flag to use the initialised conda environment
+
           python data/conversion/cases/fetch-format_NHSN-HRD-data.py --preliminary True
 
       - name: Commit changes to a new feature branch
-        shell: bash
+        shell: bash -l {0}
         run: |
 
           # generate timestamped branch name and store as environmental variable
@@ -64,13 +66,13 @@ jobs:
           git push origin "$BRANCH_NAME"
 
       - name: Create a pull request
-        shell: bash
+        shell: bash -l {0}
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
           gh pr create --base main --head ${{ env.BRANCH_NAME }} --title "Automated NHSN HRD Preliminary Data Update" --body "This PR includes the latest update of the preliminary NHSN HRD data."
       
       - name: Merge pull request
-        shell: bash
+        shell: bash -l {0}
         run: |
           gh pr merge --delete-branch --squash
 
