--- a/.github/workflows/fetch-consolidated_NHSN_HRD.yml
+++ b/.github/workflows/fetch-consolidated_NHSN_HRD.yml
@@ -9,7 +9,7 @@ on:
 # |  |  |  |  |
 # *  *  *  *  *  command to be executed
   schedule:
-    - cron: '0 12 * * 0' # Runs every Sunday at 8:00 AM EDT (12:00 PM UTC) -- months 10-12
+    - cron: '0 12 * * 0' # Runs every Sunday at 8:00 AM EDT (12:00 PM UTC)
   workflow_dispatch:      # Allows manual triggering
 
 permissions:
