--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "hierarchSIR"
 version = "0.0"
-description = "A multi-strain SIR seasonal influenza model"
+description = "An SIR Bayesian hierarchical influenza model"
 authors = [{name = "Dr. Tijs W. Alleman", email = "twa27@cornell.edu"}]
 license = "CC-BY-NC-SA-4.0"
 license-files = ["LICENSE-CC-BY-NC-SA.txt"]
 readme = "README.md"
-requires-python = ">=3.12.0"
+requires-python = ">=3.14.0"
 dependencies = [
     "matplotlib",
     "xarray",
@@ -19,7 +19,7 @@ dependencies = [
     "scipy",
     "openpyxl",
     "pytest",
-    "pySODM>=0.2.8"
+    "pySODM>=0.2.9"
 ]
 
 [project.optional-dependencies]
