--- a/.github/workflows/slackbot.yml
+++ b/.github/workflows/slackbot.yml
@@ -9,6 +9,7 @@ on:
 jobs:
 
   deploy:
+    # Prevents automatic triggering after failed previous workflow
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
 
