--- a/.github/workflows/submit-forecasts.yml
+++ b/.github/workflows/submit-forecasts.yml
@@ -14,7 +14,7 @@ jobs:
 
   upload:
 
-    # Set up on virtual ubuntu machine
+    # Prevents automatic triggering after failed previous workflow
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
 
