--- a/.github/workflows/fetch-preliminary_NHSN_HRD.yml
+++ b/.github/workflows/fetch-preliminary_NHSN_HRD.yml
@@ -17,7 +17,8 @@ permissions:
   pull-requests: write    # Grants permission to create PRs
 
 jobs:
-  pull_data:
+
+  fetch_data:
     runs-on: ubuntu-latest
 
     steps:
