--- a/.github/workflows/submit-forecasts.yml
+++ b/.github/workflows/submit-forecasts.yml
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
 
-  upload:
+  upload_forecasts:
 
     # Prevents automatic triggering after failed previous workflow
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
