--- a/.github/workflows/slackbot.yml
+++ b/.github/workflows/slackbot.yml
@@ -8,7 +8,9 @@ on:
 
 jobs:
 
-  deploy:
+  post_results:
+
+    # Prevents automatic triggering after failed previous workflow
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
 
