also use python 3.14 in all workflows

--- a/.github/workflows/run-forecasts.yml
+++ b/.github/workflows/run-forecasts.yml
@@ -47,10 +47,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - name: Download and set up Python 3.12
+      - name: Download and set up Python
         uses: actions/setup-python@v6
         with:
-          python-version: '3.12'
+          python-version: '3.14'
 
       - name: Download and set up the BENTOLAB-HIERARCHSIR anaconda environment
         uses: conda-incubator/setup-miniconda@v3
