--- a/.github/workflows/validate_model_setup.yml
+++ b/.github/workflows/validate_model_setup.yml
@@ -1,19 +1,19 @@
-name: Run unit tests
+name: Validate model setup
 
 on: [pull_request]
 jobs:
-  deploy:
+  validate_model_setup:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: ['ubuntu-latest',]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v6
       with:
-        python-version: '3.12'
+        python-version: '3.14'
 
     - name: Set up conda environment
       uses: conda-incubator/setup-miniconda@v3
@@ -27,15 +27,9 @@ jobs:
         conda activate BENTOLAB-HIERARCHSIR
         sudo apt-get update && sudo apt-get install -y libboost-all-dev
 
-    - name: Install BENTOLAB-HIERARCHSIR 
+    - name: Install model code in BENTOLAB-HIERARCHSIR 
       shell: bash -l {0}
       run: |
         conda activate BENTOLAB-HIERARCHSIR
         python -m pip install --upgrade pip
         pip install -e . --force-reinstall
-
-    # - name: Run unit test
-    #   shell: bash -l {0}
-    #   run: |
-    #     conda activate BENTOLAB-HIERARCHSIR
-    #     pytest src/tests/test_lpp.py
