--- a/.github/workflows/backfill-preliminary_NHSN_HRD.yml
+++ b/.github/workflows/backfill-preliminary_NHSN_HRD.yml
@@ -28,7 +28,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
         with:
           activate-environment: BENTOLAB-HIERARCHSIR 
-          environment-file: BENTOLAB-HIERARCHSIR_conda-env.yml  
+          environment-file: environment.lock.yml
 
       - name: Run backfill script
         shell: bash -l {0}
