--- a/.github/workflows/fetch-preliminary_NHSN_HRD.yml
+++ b/.github/workflows/fetch-preliminary_NHSN_HRD.yml
@@ -31,7 +31,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
         with:
           activate-environment: BENTOLAB-HIERARCHSIR 
-          environment-file: BENTOLAB-HIERARCHSIR_conda-env.yml  
+          environment-file: environment.lock.yml  
 
       - name: Run data collection script
         shell: bash -l {0}
