--- a/.github/workflows/slackbot.yml
+++ b/.github/workflows/slackbot.yml
@@ -29,7 +29,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
         with:
           activate-environment: BENTOLAB-HIERARCHSIR
-          environment-file: BENTOLAB-HIERARCHSIR_conda-env.yml
+          environment-file: environment.lock.yml
 
       - name: Post in Bento Lab Slack channel 
         shell: bash -l {0}
