--- a/.github/workflows/run-forecasts.yml
+++ b/.github/workflows/run-forecasts.yml
@@ -56,7 +56,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
         with:
           activate-environment: BENTOLAB-HIERARCHSIR
-          environment-file: environment.lock.yml
+          environment-file: conda-lock.yml
 
       - name: Install Boost Libraries and compiler toolchain
         shell: bash -l {0}
