forgot the setup

--- a/.github/workflows/validate_model_setup.yml
+++ b/.github/workflows/validate_model_setup.yml
@@ -19,7 +19,7 @@ jobs:
       uses: conda-incubator/setup-miniconda@v3
       with:
         activate-environment: BENTOLAB-HIERARCHSIR
-        environment-file: environment.lock.yml
+        environment-file: conda-lock.yml
 
     - name: Install Boost Libraries
       shell: bash -l {0}
