--- a/BENTOLAB-HIERARCHSIR_conda-env.yml
+++ b/BENTOLAB-HIERARCHSIR_conda-env.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.12
+  - python=3.14
   - jupyter
   - matplotlib
   - xarray
@@ -16,3 +16,4 @@ dependencies:
   - fastparquet
   - geopandas
   - slack_sdk
+  - fiona
