--- a/.github/workflows/run-forecasts.yml
+++ b/.github/workflows/run-forecasts.yml
@@ -1,10 +1,8 @@
 name: Run forecasts
+
 on:
-  workflow_run:
-    workflows: ["Backfill preliminary NHSN HRD dataset"]   # auto-trigger when preliminary data has been fetched succesfully
-    types:
-      - completed
-  workflow_dispatch:  # allows manual trigger from Actions tab
+  workflow_call:          # As a child process of forecast_pipeline.yml
+  workflow_dispatch:      # Allows manual triggering
 
 permissions:
   contents: write         # Allows pushing commits
@@ -12,10 +10,8 @@ permissions:
 
 jobs:
 
-  deploy_forecasts:
+  run_forecasts:
 
-    # Prevents automatic triggering after failed previous workflow
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: self-hosted
 
     steps:
