--- a/.github/workflows/post-visualisations_slack.yml
+++ b/.github/workflows/post-visualisations_slack.yml
@@ -1,17 +1,16 @@
 name: Post results in Bento Lab Slack
+
 on:
-  workflow_run:
-    workflows: ["Visualise forecasts"]   # auto-trigger when preliminary data has been fetched succesfully
-    types:
-      - completed
-  workflow_dispatch:  # allows manual trigger from Actions tab
+  workflow_call:          # As a child process of forecast_pipeline.yml
+    secrets:
+      SLACK_BOT_TOKEN:
+        required: true
+  workflow_dispatch:      # Allows manual triggering
 
 jobs:
 
   post_results:
 
-    # Prevents automatic triggering after failed previous workflow
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
 
     steps:
