--- a/.github/workflows/submit-forecasts.yml
+++ b/.github/workflows/submit-forecasts.yml
@@ -1,10 +1,13 @@
 name: Submit forecasts
+
 on:
-  workflow_run:
-    workflows: ["Run forecasts"]   # auto-trigger when forecasts have been generated succesfully
-    types:
-      - completed
-  workflow_dispatch:  # allows manual trigger from Actions tab
+  workflow_call:
+    secrets:
+      SUBMIT_FORECAST_TOKEN:
+        required: true
+      PR_CREATION_TOKEN:
+        required: true
+  workflow_dispatch:
 
 permissions:
   contents: write         # Allows pushing commits
@@ -12,10 +15,8 @@ permissions:
 
 jobs:
 
-  upload_forecasts:
+  submit_forecasts:
 
-    # Prevents automatic triggering after failed previous workflow
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
 
     steps:
