--- a/.github/workflows/backfill-preliminary_NHSN_HRD.yml
+++ b/.github/workflows/backfill-preliminary_NHSN_HRD.yml
@@ -17,6 +17,15 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
+        with:
+          ref: main
+          fetch-depth: 0 # (default: 1 ---> fetches only tip of main from the default origin at workflow start time) 
+
+      - name: Pull latest main
+        shell: bash
+        run: |
+          git fetch origin main
+          git reset --hard origin/main
 
       - name: Set up conda environment
         uses: conda-incubator/setup-miniconda@v3
