--- a/.github/workflows/submit-forecasts.yml
+++ b/.github/workflows/submit-forecasts.yml
@@ -1,13 +1,8 @@
 name: Submit forecasts
 
 on:
-  workflow_call:
-    secrets:
-      SUBMIT_FORECAST_TOKEN:
-        required: true
-      PR_CREATION_TOKEN:
-        required: true
-  workflow_dispatch:
+  workflow_call:          # As a child process of forecast_pipeline.yml
+  workflow_dispatch:      # Allows manual triggering
 
 permissions:
   contents: write         # Allows pushing commits
@@ -20,15 +15,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout your main forecast repo
+      # Checkout the main forecast repo
       - name: Checkout forecast repository
         uses: actions/checkout@v5
         with:
           repository: BentoLab-DiseaseDynamics/Cornell_JHU-hierarchSIR
           path: forecast-repo
+          fetch-depth: 0 # (default: 1 ---> fetches only tip of main from the default origin at workflow start time ---> previous job added a new tip) 
+
+      - name: Pull latest main
+        shell: bash
+        working-directory: forecast-repo
+        run: |
+          git fetch origin main
+          git reset --hard origin/main
 
       # Find latest forecast file
       - name: Find latest forecast file
+        shell: bash
         working-directory: forecast-repo
         run: |
           LATEST_FILE=$(ls data/interim/calibration/forecast/SIR-1S/hyperparameters-exclude_None/*.csv | sort -r | head -n 1)
@@ -39,7 +43,7 @@ jobs:
           echo "LATEST_FILE=$ABS_PATH" >> $GITHUB_ENV
           echo "REFERENCE_DATE=$REFERENCE_DATE" >> $GITHUB_ENV
 
-      # Checkout your forked challenge repo
+      # Checkout the forked challenge repo
       - name: Checkout CDC FluSight repository fork
         uses: actions/checkout@v5
         with:
